Changes for 1.8.3

 - [ZBX-1436] fixed trigger events display after next steps  monitoring -> triggers -> click on any event time (Maxim Andruhovich / AM)
 - [ZBX-1532] added screen name to visual screen editing form (when adding screen rows and cols) (Maxim Andruhovich / AM)
 - [ZBX-2438] fixed configuration of ssh2 on FreeBSD. Thanks to Alex Deiter (asaveljevs)
 - [ZBX-2423] added custom color input for link elements (Vedmak)
 - [ZBX-2100] fixed group with templates but without hosts breaks map editing issue (Aly)
 - [ZBX-1591] fixed "advanced icons" for image type map elements (Aly)
 - [ZBX-1882] fixed selecting items from disabled hosts for graphs (Aly)
 - [ZBX-1126] fixed large numbers processing for values stored as 'Delta' (Sasha)
 - [ZBXNEXT-241] extended proxy screen to show proxy vps and item count (Vedmak)
 - [DEV-460] improved host-group and maps icons info in zabbix maps (Aly)
 - [ZBX-2379] fixed trigger expression editing with trigger builder (Maxim Andruhovich/AM)
 - [ZBXNEXT-338] added caching of eventid's (Sasha)
 - [ZBX-1438] fixed not deleting data from trends_uint table when delete item (Vedmak)
 - [ZBX-2276] fixed dashboard discovery status header (Aly)
 - [ZBX-2377] fixed converting html special chars in graphs legend (Aly)
 - [ZBX-2311] fixed Host group empty value selection for items filtering (Aly)
 - [ZBXNEXT-313] implemented string pool for configuration cache (asaveljevs)
 - [ZBX-2417] fixed timeout handling for passive checks on agent side (Sasha)
 - [ZBX-1873] added slideshow delay multiplayer and fixed slides not showing graphs (Vedmak)
 - [ZBX-2282] fixed availability updating of ipmi hosts, monitored by proxy (Sasha)
 - [ZBX-2412] fixed deleting maps with API (Aly)
 - [ZBX-2341] fixed cutting 20 bytes instead of 20 symbols in char/log/text item values (Vedmak)
 - [ZBX-2407] fixed repeated message on cookie size limit (Aly)
 - [ZBX-2406] removed filter from plaintext history (Aly)